--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "github action that make issues of emails",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "format": "pretty-quick --no-restage",
+    "format:staged": "pretty-quick --staged",
+    "format:all": "prettier --write .",
+    "format-check": "pretty-quick --check"
   },
   "repository": {
     "type": "git",
@@ -17,8 +21,11 @@
   },
   "homepage": "https://github.com/abrahamberg/mail2issue#readme",
   "devDependencies": {
+    "@types/imap": "^0.8.40",
     "@types/jest": "^29.5.12",
+    "@types/mailparser": "^3.4.4",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@vercel/ncc": "^0.38.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
@@ -26,5 +33,12 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "imap": "^0.8.19",
+    "mailparser": "^3.7.1",
+    "nodemailer": "^6.9.13"
   }
 }
