--- a/action.yaml
+++ b/action.yaml
@@ -5,8 +5,21 @@ inputs:
     description: "json config for mailbox (see docs)"
     required: true
   task:
-    description: "task > sync | comment | test"
+    description: "task : sync | comment | test"
     required: true
+  token:
+    description: >
+      Personal access token (PAT) used to fetch the repository. The PAT is configured
+      with the local Issues config, which enables your scripts to run authenticated git
+      commands. The post-job step removes the PAT.
+
+
+      We recommend using a service account with the least permissions necessary.
+      Also when generating a new PAT, select the least scopes necessary.
+
+
+      [Learn more about creating and using encrypted secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets)
+    default: ${{ github.token }}
   
 
 runs:
