--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/abrahamberg/mail2issue#readme",
   "devDependencies": {
+    "@types/email-reply-parser": "^1.4.2",
     "@types/imap": "^0.8.40",
     "@types/jest": "^29.5.12",
     "@types/mailparser": "^3.4.4",
@@ -38,6 +39,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "email-reply-parser": "^1.6.0",
     "imap": "^0.8.19",
     "mailparser": "^3.7.1",
     "nodemailer": "^6.9.13"
