--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@npmcli/package-json": "^5.1.0",
     "email-reply-parser": "^1.6.0",
     "imap": "^0.8.19",
     "mailparser": "^3.7.1",
