--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,19 +40,19 @@ jobs:
           git push 
           git pull
 
-      - uses: googleapis/release-please-action@v4
-        id: release
-        with:
-          release-type: node
+      # - uses: googleapis/release-please-action@v4
+      #   id: release
+      #   with:
+      #     release-type: node
 
-      - name: Bump version
-        id: bump
-        run: |
-          git tag -d v${{ steps.release.outputs.major }} || true
-          git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
-          git push origin :v${{ steps.release.outputs.major }} || true
-          git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
-          git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
-          git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
-          git push origin v${{ steps.release.outputs.major }}
-          git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
+      # - name: Bump version
+      #   id: bump
+      #   run: |
+      #     git tag -d v${{ steps.release.outputs.major }} || true
+      #     git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+      #     git push origin :v${{ steps.release.outputs.major }} || true
+      #     git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+      #     git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
+      #     git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
+      #     git push origin v${{ steps.release.outputs.major }}
+      #     git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
